[package]
name = "bombardier"
version = "0.1.0"
authors = ["Coding Yogi<aniket.g2185@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajson = "0.2.3"
clap = "2.33.1"
chrono = "0.4.13"
crossbeam = "0.7.3"
csv = "1.1.3"
flexi_logger = { version = "0.15.10", features = ["colors"] }
libxml = "0.2.14"
log = "0.4.11"
native-tls = "0.2.4"
parking_lot = "0.11.0"
prettytable-rs = "0.8"
rayon = "1.3.0"
regex = "1.3.9"
reqwest = { version = "0.10.7", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
tungstenite = "0.11.0"
url = "2.1.1"
ws = "0.9.1"