[package]
name = "bombardier"
version = "0.1.0"
authors = ["Coding Yogi<aniket.g2185@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ajson = "0.2.4"
clap = "2.33.3"
chrono = "0.4.19"
crossbeam = "0.8.1"
csv = "1.1.6"
flexi_logger = { version = "0.18.0", features = ["colors"] }
libxml = "0.3.0"
log = "0.4.14"
native-tls = "0.2.7"
parking_lot = "0.11.1"
prettytable-rs = "0.8"
rayon = "1.5.1"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json", "blocking", "cookies", "native-tls", "multipart"] }
serde = { version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"
tungstenite = "0.14.0"
url = "2.2.2"
ws = "0.9.1"