[package]
name = "bombardier"
version = "0.1.0"
authors = ["Coding Yogi<aniket.g2185@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
async-trait = "0.1.51"
clap = "2.33.3"
chrono = "0.4.19"
crossbeam = "0.8.1"
csv-async = {version = "1.2.1", features = ["tokio"]}
flexi_logger = { version = "0.18.0", features = ["colors"] }
futures = "0.3.16"
gjson = "0.8.0"
libxml = "0.3.0"
log = "0.4.14"
native-tls = "0.2.7"
parking_lot = "0.11.1"
prettytable-rs = "0.8"
rayon = "1.5.1"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json", "blocking", "cookies", "native-tls", "multipart"] }
serde = { version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"
serde_yaml = "0.8.17"
tokio = { version = "1.9.0", features = ["full"] }
tungstenite = "0.14.0"
tokio-tungstenite = "0.15.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4"]}
warp = "0.3.1"